<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="activity"
            type="leopardcat.studio.fcosquad.ui.intro.IntroActivity" />

        <variable
            name="viewModel"
            type="leopardcat.studio.fcosquad.viewmodel.IntroViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout"
        android:animateLayoutChanges="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_intro"
        android:onClick="@{() -> activity.hideKeyboard()}">

        <TextView
            android:id="@+id/fion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/hb"
            android:gravity="center"
            android:paddingEnd="17dp"
            android:text="@string/intro_fion"
            android:textColor="@color/white"
            android:textSize="54dp"
            android:textStyle="italic|bold"
            app:layout_constraintBottom_toTopOf="@+id/real"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/ball"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="94dp"
            android:src="@drawable/intro_ball"
            android:layout_marginBottom="23dp"
            app:layout_constraintBottom_toTopOf="@+id/introText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/real"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="37dp"
            android:gravity="center"
            android:paddingEnd="56dp"
            android:text="@string/intro_real"
            android:textColor="#DDEDFF"
            android:textSize="28dp"
            android:textStyle="italic|bold"
            app:layout_constraintBottom_toTopOf="@+id/introText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <View
            android:id="@+id/centerView"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="70dp"
            android:background="@color/transparent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/introText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="82dp"
            android:layout_marginEnd="82dp"
            android:paddingBottom="10dp"
            android:gravity="center"
            android:paddingTop="8dp"
            android:text="@string/intro_info"
            android:textColor="@color/white"
            android:textSize="14dp"
            android:animateLayoutChanges="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/centerView"/>

        <EditText
            android:id="@+id/textInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_user_name"
            android:padding="10dp"
            android:layout_marginStart="70dp"
            android:layout_marginEnd="70dp"
            android:gravity="center"
            android:hint="@string/intro_coach_name"
            android:textSize="13dp"
            android:animateLayoutChanges="true"
            android:imeOptions="actionDone"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/introText" />

        <Button
            android:id="@+id/inputButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginStart="70dp"
            android:layout_marginEnd="70dp"
            android:layout_marginTop="8dp"
            android:text="@string/intro_input"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:backgroundTint="@color/main_blue"
            android:animateLayoutChanges="true"
            android:onClick="@{() -> activity.confirm()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputEditText" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notification"
            android:theme="@style/trade10White"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:gravity="center"
            app:layout_constraintBottom_toTopOf="@+id/bottom"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Data based on NEXON Open API"
            android:theme="@style/pagePlayerName"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>