<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="fragment"
            type="leopardcat.studio.fcosquad.ui.main.UserFragment" />

        <variable
            name="viewModel"
            type="leopardcat.studio.fcosquad.viewmodel.MainViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/mainView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/bottomNav">

            <ImageView
                android:id="@+id/bgProfile"
                android:layout_width="53dp"
                android:layout_height="53dp"
                android:layout_marginTop="15dp"
                android:layout_marginStart="20dp"
                android:background="@drawable/bg_user_division"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/profileImage"
                android:layout_width="34dp"
                android:layout_height="34dp"
                app:layout_constraintStart_toStartOf="@+id/bgProfile"
                app:layout_constraintBottom_toBottomOf="@id/bgProfile"
                app:layout_constraintEnd_toEndOf="@id/bgProfile"
                app:layout_constraintTop_toTopOf="@id/bgProfile" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/userInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="17dp"
                android:layout_marginStart="10dp"
                app:layout_constraintStart_toEndOf="@+id/bgProfile"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/coachName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:theme="@style/setting16"
                    android:text="@{String.valueOf(viewModel.fcoUserInfo.nickname)}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <TextView
                    android:id="@+id/level"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:theme="@style/setting14Blue"
                    android:text="Lv."
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/coachName"/>

                <TextView
                    android:id="@+id/coachLevel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:theme="@style/setting14Blue"
                    android:text="@{String.valueOf(viewModel.fcoUserInfo.level)}"
                    app:layout_constraintStart_toEndOf="@+id/level"
                    app:layout_constraintTop_toBottomOf="@+id/coachName"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/changeCoach"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="17dp"
                android:background="@drawable/bg_change_coach"
                android:text="@string/setting_change_coach_name"
                android:paddingStart="10dp"
                android:paddingTop="6dp"
                android:paddingEnd="10dp"
                android:paddingBottom="6dp"
                android:theme="@style/pageBlue12"
                android:onClick="@{() -> fragment.changeUser()}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/playerList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:paddingEnd="7dp"
                android:layout_marginTop="39dp"
                android:text="@string/setting_buy"
                android:theme="@style/pageTitleBlue"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bgProfile" />

            <View
                android:id="@+id/buyView"
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="7dp"
                android:background="@color/main_blue"
                app:layout_constraintStart_toStartOf="@+id/playerList"
                app:layout_constraintEnd_toEndOf="@+id/playerList"
                app:layout_constraintTop_toBottomOf="@+id/playerList"/>

            <TextView
                android:id="@+id/dataUpdateInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setting_data_update"
                android:theme="@style/setting12Gray"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingTop="6dp"
                android:paddingBottom="6dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/bg_data_update"
                android:onClick="@{() -> fragment.dataUpdateBottomSheet()}"
                app:layout_constraintTop_toTopOf="@+id/playerList"
                app:layout_constraintEnd_toEndOf="parent"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/PlayerListRV"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="25dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:background="@color/transparent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/playerList" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:visibility="invisible"
            android:id="@+id/bottomNav"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_bottom_tab"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:id="@+id/search"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:src="@drawable/search_nor"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/squad"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <ImageView
                android:id="@+id/squad"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:src="@drawable/squad_pre"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/user"
                app:layout_constraintStart_toEndOf="@+id/search"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/user"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:src="@drawable/user_nor"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/squad"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>